--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "start": "node dist/index.js",
     "build": "tsc",
     "dev": "ts-node-dev --respawn src/index.ts",
-    "test": "NODE_ENV=test jest --detectOpenHandles"
+    "test": "jest --forceExit"
   },
   "dependencies": {
     "cors": "^2.8.5",
