--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.17",
     "@types/pg": "^8.11.11",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.6",
